--- a/migration/migration.less
+++ b/migration/migration.less
@@ -80,7 +80,6 @@
         margin-top: 2em;           // Main padding top
     }
 
-
     // Replaces main padding by moving this to the last widget in the zone
     #page-zones__main > .widget:not([data-name="row"]):last-child {
         margin-bottom: 2em;        // Main padding bottom
@@ -93,13 +92,10 @@
 
     // Remove padding when single widgets are inside a column
     [data-name="row"] .column .widget {
-        &:only-child {
-            padding-bottom: 0;
-        }
 
         // Re-add widget spacing inside of rows
         + .widget {
-            margin-top: 12px;
+            margin-top: 8px;
         }
     }
 }
